feat(admin): 支持用户角色管理及权限校验
- 在JWT中增加角色信息，完善鉴权逻辑，实现基于角色的访问控制
- 修改Spring Security配置，API访问权限区分管理员与普通用户
- 后端添加接口支持管理员修改用户角色，禁止删除最后一个管理员
- 评论服务支持匿名临时用户发表评论，优化评论提交逻辑
- 前端管理后台新增用户角色列及角色切换按钮，实现管理员权限管理
- 调整评论组件逻辑，取消未登录回复限制，支持匿名评论
- 登录后头部显示后台管理入口，仅管理员可见
- 优化Vite打包配置，分割第三方依赖代码块
- 修改数据库初始化策略，以避免重复初始化数据